--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "collector",
+  "name": "collector-bot",
   "version": "1.0.0",
-  "type": "module",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "basic-auth": "^2.0.1",
-    "sqlite3": "^5.1.7",
-    "sqlite": "^4.1.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "dotenv": "^16.3.1",
+    "node-telegram-bot-api": "^0.61.0",
+    "sqlite3": "^5.1.6"
   }
 }
