--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "collector-bot",
   "version": "1.0.0",
+  "description": "Collector + Ross-style Notes + File Handler Bot",
   "type": "module",
   "main": "bot.js",
   "scripts": {
@@ -10,8 +11,10 @@
     "express": "^4.18.2",
     "body-parser": "^1.20.2",
     "basic-auth": "^2.0.1",
-    "node-telegram-bot-api": "^0.66.0",
-    "sqlite3": "^5.1.7",
-    "sqlite": "^4.1.2"
+    "sqlite3": "^5.1.6",
+    "sqlite": "^4.2.1",
+    "node-telegram-bot-api": "^0.61.0",
+    "multer": "^2.0.0",
+    "crypto": "*"
   }
 }
